# myEgeria_demo

./: MRE_Main.py  README.md  extract_glossary_terms.py  fix_json.py  myEgeria.env  pyproject.toml
.run/: dan_data_products.run.xml
config/: config.json
config/checkstyle/: env
myegeria.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: my_egeria.py
src/DemoCode/: Examplepushingdatatoscreen.py  base_screen.py  dan_data_product_screen.py  dan_data_products.py  data_product_catalog_sample.py  data_product_screen.py  data_product_screen_current.py  data_product_screen_old.py  data_product_screen_save.py  data_products.py  data_products_css.tcss  data_products_current.py  data_products_integrated.py  data_products_v1.py  data_products_v2.py  demo_config.py  demo_service.py  egeria_results.json  login_screen.py  member_details_screen_current.py  members_screen_current.py  reactive_sample.py  splash_screen.py
src/DemoCode/Data_Products_Demo/: data_products.py  data_products.tcss  member_details_screen.py
src/DemoCode/Experimental Code/: experiment1.tcss  experiment2-tree-rotated.py  experiment2-tree.py  experiment2.py
src/DemoCode/My_Profile/: CreateProfileScreen.py  MainScreen.py  MyTeam.py  SearchForTermScreen.py  SelectionOverviewScreen.py  ShopForDataScreen.py  StatusScreen.py  TechnologyTypeOptionsScreen.py  TechnologyTypeProcessesScreen.py  TechnologyTypeTemplatesScreen.py  TechnologyTypesScreen.py  my_profile.tcss  my_profile_app.py  my_profile_tui.py
src/DemoCode/Old_data_product/: base_screen.py  data_product_screen.py  data_products.py  demo_service.py  egeria_client.py  egeria_connection.py  login_screen.py  splash_screen.py
src/DemoCode/Report_Specs_Demo/: my_reports.py  report_spec.py  report_spec_details.py  report_spec_splash_screen.py  report_specs.tcss
src/DemoCode/Technology_Type_Demo/: my_connectors.py  my_connectors.tcss  tech_type.py
src/con_services/: egeria_connection.py
src/screens/: login_screen.py
src/screens/glossary/: glossary_browser.py  glossary_browser_old.py  term_list_screen.py
