[tool.uv]
#
#   PDX-License-Identifier: Apache-2.0
#   Copyright Contributors to the ODPi Egeria project.
[project]
name = "myegeria"
version = "0.1.0"
description = "A textual UI for Egeria"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "Apache-2.0" }
authors = [
    { name = "Peter Coldicott", email = "peter.coldicott@pdr-associates.com" },
]
keywords = ["egeria", "metadata", "governance"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
]
dependencies = [
    "httpx",
    "rich",
    "validators",
    "urllib3",
    "requests",
    "jupyter",
    "click",
    "trogon>=0.6.0,<0.7.0",
    "textual==8.0.2",
    "mermaid-py",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "jupyter-notebook-parser>=0.1.4,<0.2.0",
    "loguru>=0.7.3,<0.8.0",
    "inflect>=7.5.0,<8.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pydevd-pycharm",
    "pyegeria==5.5.4.4",
    "textual-dev",
    "textual-web",
]

[project.urls]
Homepage = "https://github.com/odpi/egeria-python"
Repository = "https://github.com/odpi/egeria-python"

[project.scripts]
my_egeria = "src.main:main"
data_products = "src.DemoCode:main"

[dependency-groups]
dev = [
    "black>=25.1.0,<26.0.0",
    "flake8>=7.1.1,<8.0.0",
    "isort>=6.0.0,<7.0.0",
]
test = [
    "pytest>=8.2.2,<9.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
